# quartz

./: .gitignore  Makefile  README.md  quartz
build_patches/: CMakeLists.txt.patch  Meta_CMake_lagom_options.cmake.patch  UI_CMakeLists.txt.patch  vcpkg.json.patch
include/: engine.h  quartz.h  render.h
quartz/: CMakeLists.txt  quartz.cpp
src/: engine.c  quark.c  quartz.c  render.c  sdl.c
